<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_location_simulation"
            android:icon="@drawable/ic_position"
            android:title="@string/nav_menu_location_simulation" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/nav_menu_history" />
        <item
            android:id="@+id/nav_route_simulation"
            android:icon="@drawable/ic_move"
            android:title="@string/nav_menu_route_simulation" />
        <item
            android:id="@+id/nav_navigation_simulation"
            android:icon="@drawable/ic_search"
            android:title="模拟导航" />
    </group>
    
    <group>
        <item android:title="@string/nav_menu_settings">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/nav_menu_settings" />
                <item
                    android:id="@+id/nav_dev"
                    android:icon="@drawable/ic_menu_dev"
                    android:title="@string/nav_menu_dev" />
            </menu>
        </item>
    </group>

    <item android:title="@string/nav_menu_more">
        <menu>
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_menu_upgrade"
                android:title="@string/nav_menu_upgrade" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/nav_menu_feedback" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/nav_menu_contact" />
            <item
                android:id="@+id/nav_sponsor"
                android:icon="@drawable/ic_user"
                android:title="@string/nav_menu_sponsor" />
            <item
                android:id="@+id/nav_github"
                android:icon="@drawable/ic_menu_dev"
                android:title="@string/nav_menu_github" />
        </menu>
    </item>

</menu>
